--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #f6f6f6;
+  background: #f0f384;
   font-family: "Poppins", sans-serif;
 }
 
@@ -15,7 +15,7 @@ body {
   width: 100%;
 }
 
-.toDo-container {
+.todo-list {
   display: flex;
   flex-direction: column;
   position: relative;
@@ -29,7 +29,7 @@ body {
   box-shadow: 1px 1px 1px 2px rgba(0, 0, 0, 0.438);
 }
 
-.toDo-container h1 {
+.todo-list h1 {
   font-size: 25px;
   font-weight: 900;
   padding: 15px;
