--- a/src/style.css
+++ b/src/style.css
@@ -30,12 +30,10 @@ body {
 }
 
 .heading {
-  background: radial-gradient(
-    circle,
-    rgba(9, 9, 121, 1) 20%,
-    rgba(2, 0, 36, 1) 100%,
-    rgba(0, 212, 255, 1) 100%
-  );
+  display: flex;
+  align-items: center;
+  width: 100%;
+  background: rgba(9, 9, 121, 1);
 }
 
 .heading h1 {
@@ -68,12 +66,7 @@ body {
 .clear-btn {
   align-self: center;
   text-align: center;
-  background: radial-gradient(
-    circle,
-    rgba(9, 9, 121, 1) 20%,
-    rgba(2, 0, 36, 1) 100%,
-    rgba(0, 212, 255, 1) 100%
-  );
+  background: rgba(9, 9, 121, 1);
   color: #fff;
   padding: 15px;
   cursor: pointer;
@@ -82,12 +75,6 @@ body {
 .clear-btn:hover {
   color: #fd1d1d;
   text-decoration: underline;
-}
-
-.heading {
-  display: flex;
-  align-items: center;
-  width: 100%;
 }
 
 .second-part {
